--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </app>
   <script src="src/config/youtube.js"></script>
   <script src="src/data/exampleVideoData.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
   <script src="src/index.js"></script>
   <script src="src/services/youTube.js"></script>
   <script src="src/components/app.js"></script>
